src/test/ui/const-generics/issues/issue-62878.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-62878.rs:3:38
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                                      ^ the type must not depend on the parameter `N`

warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-62878.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0107]: wrong number of const arguments: expected 2, found 1
  --> $DIR/issue-62878.rs:7:5
   |
LL |     foo::<_, {[1]}>();
   |     ^^^^^^^^^^^^^^^ expected 2 const arguments

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/issue-62878.rs:7:11
   |
LL |     foo::<_, {[1]}>();
   |           ^ unexpected type argument

error[E0308]: mismatched types
  --> $DIR/issue-62878.rs:7:15
   |
LL |     foo::<_, {[1]}>();
   |               ^^^ expected `usize`, found array `[{integer}; 1]`

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0107, E0308, E0770.
For more information about an error, try `rustc --explain E0107`.
